# libKISSlog

./: CREDITS  README  README.md  build_demo.sh  demo.cpp  index.html  kisslog.hpp  loglite.hpp  params.json  streamdemo.cpp
demo/: CMakeLists.txt  build_demo.sh  char16_syslogdemo.cpp  customdemo.cpp  protocoldemo.cpp  streamdemo.cpp  syslogdemo.cpp  wchar_custdemo.cpp  wchar_streamdemo.cpp
kisslog/: concurrency.hpp  facility.hpp  proto.hpp  rawlogger.hpp  severity.hpp  util.hpp
kisslog/proto/: cerr.hpp
kisslog/rawlogger/: streamlogger.hpp  sysloglogger.hpp  syslogprotologger.hpp
src/: kisslog-mt-static.cpp
